--- a/hibernate-service/pom.xml
+++ b/hibernate-service/pom.xml
@@ -51,4 +51,9 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+  <defaultGoal>install</defaultGoal>
+  <directory>${basedir}/target</directory>
+  <finalName>${artifactId}-${version}</finalName>
+</build>
 </project>
